<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_package</name>
  <version>0.0.0</version>
  <description>Flask server for streaming video from Intel RealSense camera.</description>
  <maintainer email="sashagrachev2005@gmail.com">banana-killer</maintainer>
  <license>mit</license>

  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>
  <depend>python3-flask</depend>
  <depend>python3-pyrealsense2</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
